update : package json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "file-explorer",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://chinu2127.github.io/BrandNav-project",
+  "homepage": "https://github.com/chinmaya-kumar-behera/LaslesVPN-landing",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
